Adding Elements via the DOM.

--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -17,7 +17,7 @@
 
 <section id="header">
     <div class="jumbotron">
-        <div class="container">
+        <div id="list-notes" class="container">
             <h1 class="display-3">Notes App</h1>
             <p>Make a note so as not to forget anything.</p>
             <p>Add delete edit.</p>
