--- a/toDo-app/index.html
+++ b/toDo-app/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="row">
             <div class="col-md-6 offset-md-3">
-                <div class="list-group">
+                <div id="listToDo" class="list-group">
 
                     <a href="#" class="list-group-item list-group-item-action active">
                         <div class="d-flex w-100 justify-content-between">
@@ -61,6 +61,8 @@
                         <p class="mb-1 description-todo">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
                         <small class="text-muted">Donec id elit non mi porta.</small>
                     </a>
+
+
                 </div>
 
             </div>
