Changes in the html structure

--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -17,10 +17,21 @@
 
 <section id="header">
     <div class="jumbotron">
-        <div id="list-notes" class="container">
+        <div class="container">
             <h1 class="display-3">Notes App</h1>
-            <p>Make a note so as not to forget anything.</p>
-            <p>Add delete edit.</p>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <ul id="list-notes" class="list-group">
+                    <p class="list-group-item">Make a note so as not to forget anything.</p>
+                    <p class="list-group-item">Add delete edit.</p>
+                </ul>
+            </div>
         </div>
     </div>
 </section>
