--- a/toDo-app/index.html
+++ b/toDo-app/index.html
@@ -66,6 +66,8 @@
 
                 </div>
 
+                    <button id="create" type="button" class="btn btn-success">Create</button>
+
             </div>
         </div>
     </div>
