--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -31,6 +31,8 @@
                     <p class="list-group-item">Make a note so as not to forget anything.</p>
                     <p class="list-group-item">Add delete edit.</p>
                 </ul>
+                <button id="create" type="button" class="btn btn-success">Create</button>
+                <button id="removeAllNotes" type="button" class="btn btn-danger">Remove all notes</button>
             </div>
         </div>
     </div>
