Text Inputs and Live Data Filtering.

--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -27,6 +27,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 offset-md-3">
+                <form class="form-inline">
+                    <input id="seach-notes" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                </form>
                 <ul id="list-notes" class="list-group">
                     <p class="list-group-item">Make a note so as not to forget anything.</p>
                     <p class="list-group-item">Add delete edit.</p>
