--- a/toDo-app/index.html
+++ b/toDo-app/index.html
@@ -34,8 +34,11 @@
         </div>
         <div class="row">
             <div class="col-md-6 offset-md-3">
-                <div id="listToDo" class="list-group">
+                <form class="form-inline">
+                    <input id="seach-notes" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                </form>
 
+                <div id="listToDo" class="list-group">
                     <a href="#" class="list-group-item list-group-item-action active">
                         <div class="d-flex w-100 justify-content-between">
                             <h5 class="mb-1 title-todo">Wash the car</h5>
