--- a/toDo-app/index.html
+++ b/toDo-app/index.html
@@ -39,37 +39,16 @@
                 </form>
 
                 <div id="listToDo" class="list-group">
-                    <a href="#" class="list-group-item list-group-item-action active">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1 title-todo">Wash the car</h5>
-                            <small>3 days ago</small>
-                        </div>
-                        <p class="mb-1 description-todo">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                        <small>Donec id elit non mi porta.</small>
-                    </a>
-
-                    <a href="#" class="list-group-item list-group-item-action">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1 title-todo">Make an appointment with a hairdresser</h5>
-                            <small class="text-muted">3 days ago</small>
-                        </div>
-                        <p class="mb-1 description-todo">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                        <small class="text-muted">Donec id elit non mi porta.</small>
-                    </a>
-
-                    <a href="#" class="list-group-item list-group-item-action">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1 title-todo">Do your shopping for the whole week</h5>
-                            <small class="text-muted">3 days ago</small>
-                        </div>
-                        <p class="mb-1 description-todo">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                        <small class="text-muted">Donec id elit non mi porta.</small>
-                    </a>
-
-
+<!--                    <a href="#" class="list-group-item list-group-item-action visibilityHiden">-->
+<!--                        <div class="d-flex w-100 justify-content-between">-->
+<!--                            <h5 class="mb-1 title-todo">Wash the car</h5>-->
+<!--                            <small>3 days ago</small>-->
+<!--                        </div>-->
+<!--                        <p class="mb-1 description-todo">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>-->
+<!--                        <small>Donec id elit non mi porta.</small>-->
+<!--                    </a>-->
                 </div>
-
-                    <button id="create" type="button" class="btn btn-success">Create</button>
+                <button id="create" type="button" class="btn btn-success">Create</button>
 
             </div>
         </div>
