Working With Forms.

--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -32,8 +32,11 @@
                 </form>
                 <ul id="list-notes" class="list-group">
                 </ul>
+                <form id="addElement" class="form-inline">
+                    <input type="text" class="form-control mr-sm-2" placeholder="write title note" name="titleNote">
+                    <button class="btn btn-success">Create</button>
+                </form>
                 <button id="create" type="button" class="btn btn-success">Create</button>
-                <button id="removeAllNotes" type="button" class="btn btn-danger">Remove all notes</button>
             </div>
         </div>
     </div>
