--- a/toDo-app/index.html
+++ b/toDo-app/index.html
@@ -38,16 +38,14 @@
                     <input id="seach-notes" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 </form>
 
-                <div id="listToDo" class="list-group">
-<!--                    <a href="#" class="list-group-item list-group-item-action visibilityHiden">-->
-<!--                        <div class="d-flex w-100 justify-content-between">-->
-<!--                            <h5 class="mb-1 title-todo">Wash the car</h5>-->
-<!--                            <small>3 days ago</small>-->
-<!--                        </div>-->
-<!--                        <p class="mb-1 description-todo">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>-->
-<!--                        <small>Donec id elit non mi porta.</small>-->
-<!--                    </a>-->
-                </div>
+                <div id="listToDo" class="list-group"></div>
+
+                <form id="addNewElement">
+                    <input type="text" class="form-control mr-sm-2" placeholder="write title note" name="titleToDo">
+                    <button class="btn btn-success">Create</button>
+                </form>
+
+
                 <button id="create" type="button" class="btn btn-success">Create</button>
 
             </div>
