--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -30,10 +30,13 @@
                 <form class="form-inline">
                     <input id="seach-notes" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 </form>
-                <ul id="list-notes" class="list-group">
-                </ul>
+                <ul id="list-notes" class="list-group"></ul>
                 <form id="addElement" class="form-inline">
                     <input type="text" class="form-control mr-sm-2" placeholder="write title note" name="titleNote">
+                    <label>
+                        Done / Not Done
+                        <input id="forFan" type="checkbox">
+                    </label>
                     <button class="btn btn-success">Create</button>
                 </form>
                 <button id="create" type="button" class="btn btn-success">Create</button>
