--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -30,6 +30,11 @@
                 <form class="form-inline">
                     <input id="seach-notes" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 </form>
+                <select id="filterBy" class="custom-select">
+                    <option value="byEdited">Sort by last edited</option>
+                    <option value="byCreated">Sort by recently created</option>
+                    <option value="byAlphabetically">Sort by alphabetically</option>
+                </select>
                 <ul id="list-notes" class="list-group"></ul>
                 <form id="addElement" class="form-inline">
                     <input type="text" class="form-control mr-sm-2" placeholder="write title note" name="titleNote">
