--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -50,7 +50,7 @@
     </div>
 </section>
 
-
+<script src="lib/js/notes-function.js"></script>
 <script src="lib/js/notes-app.js"></script>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
