--- a/toDo-app/index.html
+++ b/toDo-app/index.html
@@ -52,7 +52,7 @@
         </div>
     </div>
 </section>
-
+<script src="lib/js/todo-functions.js"></script>
 <script src="lib/js/todo-app.js"></script>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
