Setting up a Third-Party Library.

--- a/toDo-app/index.html
+++ b/toDo-app/index.html
@@ -47,11 +47,11 @@
                     </label>
                     <button class="btn btn-success">Create</button>
                 </form>
-                <button id="create" type="button" class="btn btn-success">Create</button>
             </div>
         </div>
     </div>
 </section>
+<script src="https://wzrd.in/standalone/uuid%2Fv4@latest"></script>
 <script src="lib/js/todo-functions.js"></script>
 <script src="lib/js/todo-app.js"></script>
 <!-- Optional JavaScript -->
