--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -44,12 +44,11 @@
                     </label>
                     <button class="btn btn-success">Create</button>
                 </form>
-                <button id="create" type="button" class="btn btn-success">Create</button>
             </div>
         </div>
     </div>
 </section>
-
+<script src="https://wzrd.in/standalone/uuid%2Fv4@latest"></script>
 <script src="lib/js/notes-function.js"></script>
 <script src="lib/js/notes-app.js"></script>
 <!-- Optional JavaScript -->
