--- a/notes-app/edit.html
+++ b/notes-app/edit.html
@@ -16,6 +16,7 @@
             <div class="row"><div class="col-md-6 offset-md-3 text-center"><h1>Edit</h1></div></div>
             <div class="row">
                 <div class="col-md-8 offset-md-2">
+                    <div class="mb-2"><p id="last-edied"></p> </div>
                     <form>
                         <div class="form-group">
                             <label for="exampleFormControlInput1">Title note</label>
@@ -32,6 +33,9 @@
             </div><!--row-->
         </div>
     </section>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.0/moment-with-locales.min.js"></script>
+<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.0/locale/pl.min.js"></script>-->
 
     <script src="lib/js/notes-function.js"></script>
     <script src="lib/js/notes-edit.js"></script>
