--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -74,6 +74,10 @@
         </div>
     </div>
 </section>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.0/moment-with-locales.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.0/locale/pl.min.js"></script>
+
 <script src="https://wzrd.in/standalone/uuid%2Fv4@latest"></script>
 <script src="lib/js/notes-function.js"></script>
 <script src="lib/js/notes-app.js"></script>
